src/styles.scss
/* ... */
#body-content {
  padding-bottom: 14px;
  width: 600px;
}

footer {
  width: 100%;
  height: 14px;
  position: relative;
  transform: translateY(-100%);
  text-align: center;
}

/*✅ loading__container*/
.loading__container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

/* ✅ Auth */
.auth__container {
  display: flex;
  flex-direction: column;
  padding: 20px;
  margin: 0 52px;
  .auth__title__container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    .auth__title {
      font-weight: 700;
      font-size: 60px;
      margin: 48px 0;
    }
    .auth__subtitle {
      font-weight: 700;
      font-size: 30px;
      margin: 0 0 32px;
    }
  }

  .auth__btns {
    display: flex;
    flex-direction: column;
    button {
      width: 300px;
      margin-bottom: 15px;
    }
    .auth__btn {
      background-color: transparent;
      border: 1px solid #dcdfe2;
      border-radius: 25px;
      height: 40px;
      padding: 0 16px;
    }
    .line__box {
      max-width: 300px;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      .line {
        width: 130px;
        height: 1px;
        box-sizing: border-box;
        background-color: $color-border;
      }
    }
    .auth-form {
      display: flex;
      flex-direction: column;
      input {
        font-weight: 500;
        width: 300px;
        margin-bottom: 15px;
        border-radius: 5px;
        cursor: auto;
      }
      input:focus {
        background-color: #ebf5fe;
        transition: 0.3s;
      }
    }
    .auth__h3 {
      margin: 15px 0;
    }
  }
}

/*✅ nav*/
.header {
  position: relative;
  box-sizing: border-box;
  flex-grow: 1;
  display: flex;
  flex-basis: auto;
  flex-direction: column;
  .header__container {
    width: 88px;
    position: relative;
    display: flex;
    flex-basis: auto;
    flex-direction: column;
    align-items: stretch;
    box-sizing: border-box;
    .nav {
      width: 88px;
      overflow-y: auto;
      height: 100%;
      position: fixed;
      padding: 0 12px 20px 12px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: center;
      box-sizing: border-box;
      flex-basis: auto;
      flex-direction: column;
      .nav__ul {
        .nav__ul__li {
          width: 50px;
          .nav__ul__li__btn {
            width: 50px;
            height: 50px;
            display: flex;
            align-items: stretch;
            justify-content: center;
            margin: 4px 0;
          }
        }
      }
      .nav__user {
        display: flex;
        flex-direction: column;
        align-items: center;
        .nav__user__userImg {
          width: 64px;
          height: 64px;
          padding: 12px;
          .nav__user__userImg_img {
            background-color: $color-main;
            width: 40px;
            height: 40px;
            border-radius: 25px;
          }
        }
      }
    }
  }
}

/*✅ home*/
.home__container {
  padding: 0;
  .home__tile {
    border-left: 1px solid $color-border;
    border-right: 1px solid $color-border;
    padding: 0 16px;
    /*엥 이거 왜 두배 되는거지?*/
    font-size: 10px;
    position: sticky;
    position: -webkit-sticky;
    height: 53px;
    top: 0;
    background-color: rgba(255, 255, 255, 0.85);
    backdrop-filter: blur(12px);
    display: flex;
    align-items: center;
  }
  .home__main-container {
    max-width: 600px;
    width: 100%;
    /*트윗 팩토리*/
    .home__tweetSender {
      border-left: 1px solid $color-border;
      border-right: 1px solid $color-border;
      border-bottom: 1px solid $color-border;
      border-top: 0;
      padding: 0 16px;
      display: grid;
      grid-template-columns: 1fr 8fr;
      .home__tweetSender__userImg {
        margin: 0 12px 0 0;
        padding: 4px 0 0;
        .home__tweetSender__userImg__img {
          height: 48px;
          width: 48px;
          background-color: $color-main;
          border-radius: 25px;
        }
      }
      .home__tweetSender__writeBox {
        max-width: 502px;
        .home__tweetSender__writeBox__text {
          padding: 12px 0;
          font-size: 20px;
          input {
            overflow: auto;
            width: 100%;
          }
        }
        .home__tweetSender__writeBox__btn {
          margin-bottom: 15px;
          display: flex;
          justify-content: space-between;
          align-items: center;
          margin-top: 12px;
          label {
            cursor: pointer;
          }
          input {
            cursor: pointer;
          }
          .home__tweetSender__writeBox__btn__submit {
            input:disabled {
              background-color: #9acdf8;
              cursor: auto;
            }
          }
        }
      }
    }
  }
}
/* ... */

